# yore

./: .gitignore  CHANGELOG.md  CROSS_REF_EXPANSION_SPEC.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  YORE_ASSEMBLE_SPEC.md  YORE_IMPROVEMENTS_COMPLETE.md  build.rs  install.sh  yarli.toml
.githooks/: commit-msg  post-checkout  post-merge  pre-commit  pre-push
.github/workflows/: ci.yml  publish-crates.yml  squash-scope-review.yml
.yarl/: audit.jsonl
.yarl/workspaces/run-019c818b-29e8-72a0-9fc7-42668832a54e/merge-patches/: 001-task-1.patch
docs/: PROPOSALS.md  YORE_MAINTENANCE_WORKFLOWS.md
evaluation/: questions.jsonl
scripts/: abs-path-leak-scan.sh  install-git-hooks.sh  mcp-smoke-test.sh  squash-scope-review.sh
scripts/git-hooks/: commit-msg  pre-commit
src/: assemble.rs  cli.rs  commands_audit.rs  commands_graph.rs  commands_links.rs  commands_query.rs  commands_text.rs  config.rs  index.rs  main.rs  mcp.rs  search.rs  tests_main.rs  types.rs  util.rs
tests/: cli_integration.rs  health_cli_integration.rs  mcp_cli_integration.rs  mcp_server_integration.rs  query_integration.rs  relations_integration.rs  vocabulary_cli_integration.rs
tests/fixtures/mcp-smoke/docs/: ops.txt  zz-auth-copy.txt
