[package]
name = "yore-cli"
version = "0.3.0"
edition = "2021"
description = "Fast document indexer for finding duplicates and searching content"
license = "MIT"
keywords = ["documentation", "index", "search", "duplicates"]
categories = ["command-line-utilities", "text-processing"]
repository = "https://github.com/rahulrajaram/yore"
readme = "README.md"

[[bin]]
name = "yore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
regex = "1"
colored = "2"
toml = "0.8"
ahash = "0.8"  # Fast hashing for MinHash
serde_yaml = "0.9"
globset = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
